# amigo_msgs

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
msg/: people_detect.msg  pera_status.msg  ref_point.msg  spindle_setpoint.msg
