<package>
  <name>amigo_msgs</name>
  <version>1.0.0</version>
  <description>
    amigo_msgs
  </description>
  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/amigo_msgs</url>
  <author>Sjoerd van den Dries</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
