<package format="2">
  <name>amigo_msgs</name>
  <version>1.0.0</version>
  <description>
    amigo_msgs
  </description>
  <maintainer email="s.v.d.dries@tue.nl">Sjoerd van den Dries</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/amigo_msgs</url>
  <author>Sjoerd van den Dries</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
</package>
